src/objects/SPE_SprintBacklog__c.object
<CustomObject>
    <fields>
        <fullName>ActualHours__c</fullName>
        <label>Actual Hours</label>
        <summarizedField>SPE_SprintTasks__c.Hours_Spent__c</summarizedField>
        <summaryForeignKey>SPE_SprintTasks__c.SprintBacklog__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssignedHours__c</fullName>
        <label>Assigned Hours</label>
        <summarizedField>SPE_SprintTasks__c.Hours_Assigned__c</summarizedField>
        <summaryForeignKey>SPE_SprintTasks__c.SprintBacklog__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Build_Unit_Test_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Build &amp; Unit Test Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefinitionofDone__c</fullName>
        <label>Definition of Done</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DoDCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoD Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_test_case_passed_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incremental test case passed/completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incremental_test_case_ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incremental test case ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <formula>TEXT(ProductBacklog__r.Module__c)</formula>
        <label>Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductBacklog__c</fullName>
        <label>Product Backlog</label>
        <referenceTo>SPE_ProducBacklog__c</referenceTo>
        <relationshipLabel>Sprint Backlogs</relationshipLabel>
        <relationshipName>Sprint_Backlogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <picklist>
            <picklistValues>
                <fullName>Sprint 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint Encryption</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Work In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TDD_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TDD Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <formula>TEXT(ProductBacklog__r.Topic__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Manual_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Manual Updated</label>
        <type>Checkbox</type>
    </fields>
    <label>Sprint Backlog</label>
    <nameField>
        <label>Sprint Backlog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprint Backlogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>